html bugs fixed

--- a/index.html
+++ b/index.html
@@ -6,13 +6,11 @@
     <title> Quiz </title>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
-
-
 <body>
     <header>
         <h3>view highscores</h3>
 
-        <p>Time:  <label for="" id="timer">0</label></p>
+        <p>Time: <label for="" id="timer">0</label></p>
     </header>
  
     <main>
@@ -24,8 +22,10 @@
                 harum eaque voluptatibus fugiat velit?</p>
             <button id="start-btn">start Quiz</button>
         </section>
-        <section id="question-section">
-            <h2 id="title">question 1</h2>
+
+
+        <section id="question-section" class="hide">
+            <h2 id="title">question</h2>
             <ul>
                 <li><button class="choices">choice 1</button></li>
                 <li><button class="choices">choice 2</button></li>
@@ -34,20 +34,20 @@
             </ul>
 
         </section>
-        <section id="initial-section">
+        <section id="initial-section" class="hide">
             <h3>All done</h3>
             <p> Your Final score is <label for="" id="score">80</label></p>
 
             Enter Initials: <input type="text" id="initial-input">
             <button id="highscore-section"></button>
         </section>
-        <section id="highscore-section">
+        <section id="highscore-section" class="hide">
             <h3>high scores</h3>
             <ol>
                 <li>PL-80</li>
             </ol>
 
-            <button id="go-back-bt">Go back</button>
+            <button id="go-back-btn">Go back</button>
             <button id="clear-btn">clear history</button>
         </section>
 
