--- a/index.html
+++ b/index.html
@@ -8,24 +8,21 @@
 </head>
 <body>
     <header>
-        <h3>view highscores</h3>
+        <h3>View Highscores</h3>
 
         <p>Time: <label for="" id="timer">0</label></p>
     </header>
  
     <main>
         <section id="intro-section">
-            <h1>coding quiz challenge</h1>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-                Vitae dolorum accusamus pariatur, magnam veritatis consequuntur 
-                asperiores laudantium quisquam voluptate sit nam doloribus alias molestias possimus, 
-                harum eaque voluptatibus fugiat velit?</p>
-            <button id="start-btn">start Quiz</button>
+            <h1>Coding Quiz Challenge</h1>
+            <p>Try to answer the following code related questions within the time limit. keep in mind that incorrect answers will prnalize your scoretime by ten seconds!.</p>
+            <button id="start-btn">Start Quiz</button>
         </section>
 
 
         <section id="question-section" class="hide">
-            <h2 id="title">question</h2>
+            <h2 id="title">question 1</h2>
             <ul>
                 <li><button class="choices">choice 1</button></li>
                 <li><button class="choices">choice 2</button></li>
@@ -51,6 +48,9 @@
             <button id="clear-btn">clear history</button>
         </section>
 
+        <footer>
+
+        </footer>
 
 
    </main>
